<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView

        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="15dp"
        android:paddingTop="20dp"
        android:layout_marginTop="?actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionBar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </ScrollView>

    <View
        android:id="@+id/shaderId"
        android:alpha="0.8"
        android:visibility="gone"
        android:background="#494848"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <LinearLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/actionBarColor"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/addUserBTN"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/addbutton"
            android:src="@drawable/add_icon" />

        <ImageView
            android:id="@+id/menuBTN"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/menubutton"
            android:onClick="showMenu"
            android:src="@drawable/menu_icon" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/sideMenu"
        android:translationX="500dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/SideMenuColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionBar">

        <LinearLayout
            android:id="@+id/qrLayer"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/qricon"
                android:src="@drawable/qr_code_2_24"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:text="@string/qrcode"
                android:textSize="18sp"
                android:textColor="@color/actionBarColor"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/aboutLayer"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/abouteicon"
                android:src="@drawable/info_24"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:text="@string/aboutText"
                android:textSize="18sp"
                android:textColor="@color/actionBarColor"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/helpLayer"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/helpicon"
                android:src="@drawable/contact_support_24"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:text="@string/helpText"
                android:textSize="18sp"
                android:textColor="@color/actionBarColor"/>

        </LinearLayout>


    </LinearLayout>

    <FrameLayout
        android:id="@+id/aboutSection"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:alpha="0.9"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/aboutText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="none"
                android:inputType="textMultiLine"
                android:lineSpacingExtra="4dp"
                android:padding="16dp"
                android:scrollbars="vertical"
                android:scrollHorizontally="false"
                android:singleLine="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_gravity="center" />

        </ScrollView>

        <Button
            android:id="@+id/closeAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:layout_margin="16dp"
            android:textColor="@color/white"
            android:background="@color/ItemBack"
            android:layout_gravity="bottom"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/helpSection"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:alpha="0.9"/>

        <TextView
            android:id="@+id/helpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="none"
            android:inputType="textMultiLine"
            android:lineSpacingExtra="4dp"
            android:padding="16dp"
            android:scrollbars="vertical"
            android:scrollHorizontally="false"
            android:singleLine="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/closeHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:layout_margin="16dp"
            android:textColor="@color/white"
            android:background="@color/ItemBack"
            android:layout_gravity="bottom"/>

    </FrameLayout>



</androidx.constraintlayout.widget.ConstraintLayout>